--- a/directbak.yaml
+++ b/directbak.yaml
@@ -474,7 +474,6 @@ payload:
   - '+.05info.com'
   - '+.05vm.com'
   - '+.05wan.com'
-  - '+.062616.com'
   - '+.063108.com'
   - '+.0632idc.com'
   - '+.0634.com'
@@ -3492,6 +3491,7 @@ payload:
   - '+.3wcoffee.com'
   - '+.3wfocus.com'
   - '+.3wht.com'
+  - '+.3wka.com'
   - '+.3wmm.com'
   - '+.3wnb.com'
   - '+.3wsw.com'
@@ -7390,7 +7390,6 @@ payload:
   - '+.99meiju.org'
   - '+.99meiju.tv'
   - '+.99meili.com'
-  - '+.99mingxing.com'
   - '+.99mst.com'
   - '+.99music.net'
   - '+.99niu.com'
@@ -11729,7 +11728,6 @@ payload:
   - '+.bjsryc.com'
   - '+.bjssedu.com'
   - '+.bjsspm.com'
-  - '+.bjssqt.com'
   - '+.bjsubway.cc'
   - '+.bjsubway.com'
   - '+.bjsuewin.com'
@@ -11981,6 +11979,7 @@ payload:
   - '+.bnhgsb.com'
   - '+.bnhshiguan.com'
   - '+.bnjyks.com'
+  - '+.bnman.net'
   - '+.bnncn.com'
   - '+.bnnd.net'
   - '+.bnq86.com'
@@ -15329,6 +15328,7 @@ payload:
   - '+.chuguo78.com'
   - '+.chuguofeng.com'
   - '+.chuguohao.com'
+  - '+.chuhaibiz.com'
   - '+.chuhoi.com'
   - '+.chuimg.com'
   - '+.chuinet.com'
@@ -17271,6 +17271,7 @@ payload:
   - '+.csjplatform.com'
   - '+.csjwang.com'
   - '+.csjyzq.com'
+  - '+.cskefu.com'
   - '+.cskule.com'
   - '+.cskxjk.com'
   - '+.cslfans.com'
@@ -19582,6 +19583,7 @@ payload:
   - '+.dogecloud.com'
   - '+.dogedoge.com'
   - '+.dogfight360.com'
+  - '+.dogimg.com'
   - '+.doglobal.net'
   - '+.dogmr.com'
   - '+.dogwhere.com'
@@ -23774,6 +23776,7 @@ payload:
   - '+.game9g.com'
   - '+.gameabc.com'
   - '+.gameabc2.com'
+  - '+.gamebaike.com'
   - '+.gamebar.com'
   - '+.gamebbm.com'
   - '+.gamebean.com'
@@ -25340,7 +25343,6 @@ payload:
   - '+.guangzhou-logistics.com'
   - '+.guangzhou-marathon.com'
   - '+.guanhuaju.com'
-  - '+.guanjia2.com'
   - '+.guanjiabo.net'
   - '+.guanjiajf.com'
   - '+.guanjianfeng.com'
@@ -30831,7 +30833,6 @@ payload:
   - '+.inmuu.com'
   - '+.inneed.club'
   - '+.innjia.com'
-  - '+.innlym.me'
   - '+.innocomn.com'
   - '+.innodealing.com'
   - '+.innojoy.com'
@@ -31285,7 +31286,6 @@ payload:
   - '+.itaiping.com'
   - '+.itakeeasy.com'
   - '+.italyclassico.com'
-  - '+.italycn.com'
   - '+.itamt.com'
   - '+.itangbole.com'
   - '+.itangyuan.com'
@@ -32471,7 +32471,6 @@ payload:
   - '+.jiemodui.com'
   - '+.jiemoselect.com'
   - '+.jiepaids.com'
-  - '+.jiepang.com'
   - '+.jiepei.com'
   - '+.jiepeng023.com'
   - '+.jieqi.com'
@@ -34936,6 +34935,7 @@ payload:
   - '+.kkcoo.com'
   - '+.kkdict.com'
   - '+.kkdownload.com'
+  - '+.kkeji.com'
   - '+.kkeye.com'
   - '+.kkfor.com'
   - '+.kkguan.com'
@@ -41049,7 +41049,6 @@ payload:
   - '+.myzebravip.com'
   - '+.myzhiniu.com'
   - '+.myzhongjin.com'
-  - '+.myznh.com'
   - '+.myzte.com'
   - '+.mz-oneacg.com'
   - '+.mz-sys.com'
@@ -41182,7 +41181,6 @@ payload:
   - '+.nantaihu.com'
   - '+.nantongbike.com'
   - '+.nantonghua.net'
-  - '+.nantongle.com'
   - '+.nanxueqx.com'
   - '+.nanxunjob.com'
   - '+.nanyangcable.com'
@@ -48122,7 +48120,6 @@ payload:
   - '+.shachong8.com'
   - '+.shacumox.com'
   - '+.shaddockfishing.com'
-  - '+.shadow-forum.com'
   - '+.shadowedu.net'
   - '+.shadowq.com'
   - '+.shaduizi.com'
@@ -48587,7 +48584,6 @@ payload:
   - '+.shichuedu.com'
   - '+.shici.store'
   - '+.shicishe.com'
-  - '+.shiciting.com'
   - '+.shiciyun.com'
   - '+.shida66.com'
   - '+.shidaedu.vip'
@@ -49005,7 +49001,6 @@ payload:
   - '+.shufa.com'
   - '+.shufaai.com'
   - '+.shufabao.net'
-  - '+.shufadashi.com'
   - '+.shufafin.com'
   - '+.shufaji.com'
   - '+.shufami.com'
@@ -50413,6 +50408,7 @@ payload:
   - '+.springtour.com'
   - '+.sprzny.com'
   - '+.spswc.com'
+  - '+.spsy.org'
   - '+.sptcc.com'
   - '+.sptccn.com'
   - '+.spthome.com'
@@ -50658,6 +50654,7 @@ payload:
   - '+.stjunshi.com'
   - '+.stjy.net'
   - '+.stkey.win'
+  - '+.stklt.com'
   - '+.stlswm.com'
   - '+.stmaoyi.com'
   - '+.stmbuy.com'
@@ -51550,7 +51547,6 @@ payload:
   - '+.szqcz.com'
   - '+.szqf.org'
   - '+.szqgzx.com'
-  - '+.szqinxindz.com'
   - '+.szqsq.com'
   - '+.szqt.net'
   - '+.szquanli.com'
@@ -58482,7 +58478,6 @@ payload:
   - '+.x-medex.com'
   - '+.x-mol.com'
   - '+.x-plans.com'
-  - '+.x0750.com'
   - '+.x0769.com'
   - '+.x118.net'
   - '+.x12plus.com'
@@ -58637,6 +58632,7 @@ payload:
   - '+.xbniao.com'
   - '+.xbongbong.com'
   - '+.xbooklist.com'
+  - '+.xboot.org'
   - '+.xbptc.com'
   - '+.xbpz9.com'
   - '+.xbriyu.com'
@@ -60518,7 +60514,6 @@ payload:
   - '+.xsu.cc'
   - '+.xsvps.com'
   - '+.xswdcasting.com'
-  - '+.xsxkzz.com'
   - '+.xsycps.com'
   - '+.xsyk021.com'
   - '+.xsyqmztg.com'
@@ -61410,6 +61405,7 @@ payload:
   - '+.ybm100.com'
   - '+.ybren.com'
   - '+.ybs120.com'
+  - '+.ybscjp.com'
   - '+.ybtong.com'
   - '+.ybtvyun.com'
   - '+.ybtzjt.com'
@@ -63836,6 +63832,7 @@ payload:
   - '+.ywxzz.com'
   - '+.ywy7.com'
   - '+.ywyanxing.com'
+  - '+.ywzqzx.com'
   - '+.yx-g.com'
   - '+.yx-life.com'
   - '+.yx-s.com'
