--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1249,6 +1249,7 @@ payload:
   - '+.135031.com'
   - '+.1351.com'
   - '+.135309.com'
+  - '+.135320.com'
   - '+.135650.com'
   - '+.1356789.com'
   - '+.1356net.com'
@@ -3964,7 +3965,6 @@ payload:
   - '+.51baoxiu.com'
   - '+.51baozhanggui.com'
   - '+.51bbo.com'
-  - '+.51bdtime.com'
   - '+.51besttea.com'
   - '+.51bi.com'
   - '+.51biaoqing.com'
@@ -4622,6 +4622,7 @@ payload:
   - '+.52gg.com'
   - '+.52ggd.com'
   - '+.52ghai.com'
+  - '+.52gougouwang.com'
   - '+.52grz.com'
   - '+.52guixi.com'
   - '+.52gvim.com'
@@ -5941,7 +5942,6 @@ payload:
   - '+.76xs.com'
   - '+.76y.com'
   - '+.76zu.com'
-  - '+.7708zf02.com'
   - '+.770921.com'
   - '+.7711.com'
   - '+.77119159.com'
@@ -6650,7 +6650,6 @@ payload:
   - '+.8miu.net'
   - '+.8ms.xyz'
   - '+.8mu8.com'
-  - '+.8multimill.com'
   - '+.8n2.com'
   - '+.8n6n.com'
   - '+.8njy.com'
@@ -10677,7 +10676,6 @@ payload:
   - '+.bdfzgz.net'
   - '+.bdfzxj.net'
   - '+.bdgslb.com'
-  - '+.bdhaoye.com'
   - '+.bdhuakan.com'
   - '+.bdi.pub'
   - '+.bdimg.com'
@@ -11637,6 +11635,7 @@ payload:
   - '+.bjkrtwl.com'
   - '+.bjksd120.com'
   - '+.bjl777.com'
+  - '+.bjlanqiao.com'
   - '+.bjlcs-tech.com'
   - '+.bjlemon.com'
   - '+.bjlevsoft.com'
@@ -17149,7 +17148,6 @@ payload:
   - '+.crmg-ms.com'
   - '+.crmgz.com'
   - '+.crmip.com'
-  - '+.crmrj.net'
   - '+.crmvscrm.com'
   - '+.crnds.com'
   - '+.crnews.net'
@@ -17299,7 +17297,6 @@ payload:
   - '+.cssmagic.net'
   - '+.cssmoban.com'
   - '+.cssmxx.com'
-  - '+.cssplus.org'
   - '+.cssq33.com'
   - '+.cssqt.com'
   - '+.csstoday.net'
@@ -24493,6 +24490,7 @@ payload:
   - '+.github.do'
   - '+.githubusercontents.com'
   - '+.gitissue.com'
+  - '+.gitlee.com'
   - '+.gitlib.com'
   - '+.gitlore.com'
   - '+.gitnavi.com'
@@ -24897,7 +24895,6 @@ payload:
   - '+.goodix.com'
   - '+.goodjd.com'
   - '+.goodjili.com'
-  - '+.goodjzjg.com'
   - '+.goodkejian.com'
   - '+.goodlucknet.com'
   - '+.goodnic.net'
@@ -25758,7 +25755,6 @@ payload:
   - '+.gzgxkj.com'
   - '+.gzhakj.com'
   - '+.gzhangcha.com'
-  - '+.gzhaoxiang.net'
   - '+.gzhatao.com'
   - '+.gzhc365.com'
   - '+.gzhdcs.com'
@@ -26186,7 +26182,6 @@ payload:
   - '+.han-tang.cc'
   - '+.han66.com'
   - '+.hanamichi.wiki'
-  - '+.hanbaiji.com'
   - '+.hanbaoying.com'
   - '+.hanboshi.com'
   - '+.hanchao9999.com'
@@ -29477,6 +29472,7 @@ payload:
   - '+.hzou.net'
   - '+.hzpgc.com'
   - '+.hzpzs.net'
+  - '+.hzqf123.com'
   - '+.hzqimiao.com'
   - '+.hzqiuxue.com'
   - '+.hzqz.net'
@@ -32039,6 +32035,7 @@ payload:
   - '+.jgg09.com'
   - '+.jggame.net'
   - '+.jggjj.com'
+  - '+.jgjapp.com'
   - '+.jgjh.com'
   - '+.jgscct.com'
   - '+.jgsdaily.com'
@@ -33380,7 +33377,6 @@ payload:
   - '+.jpzyfx.com'
   - '+.jq-school.com'
   - '+.jq22.com'
-  - '+.jqbyby.com'
   - '+.jqcool.net'
   - '+.jqdto.com'
   - '+.jqdzw.com'
@@ -35905,6 +35901,7 @@ payload:
   - '+.lanzhouunicom.com'
   - '+.lanzhuwh.com'
   - '+.lanzou.com'
+  - '+.lanzouf.com'
   - '+.lanzoug.com'
   - '+.lanzoui.com'
   - '+.lanzoum.com'
@@ -37606,6 +37603,7 @@ payload:
   - '+.longwisepr.com'
   - '+.longxi-tech.net'
   - '+.longxianwen.net'
+  - '+.longxingmedical.com'
   - '+.longxuan.ren'
   - '+.longygo.com'
   - '+.longyin.net'
@@ -40234,7 +40232,6 @@ payload:
   - '+.momentcdn.net'
   - '+.momhui.com'
   - '+.momishi.com'
-  - '+.momo9.me'
   - '+.momobako.com'
   - '+.momocdn.com'
   - '+.momooyo.com'
@@ -40250,7 +40247,6 @@ payload:
   - '+.mongochina.com'
   - '+.monhun.fun'
   - '+.monidai.com'
-  - '+.monizl.com'
   - '+.monknow.com'
   - '+.monph.com'
   - '+.monseng.com'
@@ -42192,6 +42188,7 @@ payload:
   - '+.nybai.com'
   - '+.nybaidu.net'
   - '+.nyckidsclub.com'
+  - '+.nyist.net'
   - '+.nyk688.com'
   - '+.nync.com'
   - '+.nypd520.com'
@@ -42527,7 +42524,6 @@ payload:
   - '+.onekey.cc'
   - '+.onekeyghost.com'
   - '+.onekeyrom.com'
-  - '+.onemex.com'
   - '+.onemob.mobi'
   - '+.onemovie.com'
   - '+.onemsdn.com'
@@ -45759,7 +45755,6 @@ payload:
   - '+.quanmama.com'
   - '+.quanmamaimg.com'
   - '+.quanmeipai.com'
-  - '+.quanmin.la'
   - '+.quanmin.tv'
   - '+.quanmin110.com'
   - '+.quanminbagua.com'
@@ -47567,7 +47562,6 @@ payload:
   - '+.sdchina.com'
   - '+.sdchn.com'
   - '+.sdcqjy.com'
-  - '+.sdcydl.com'
   - '+.sdd17.com'
   - '+.sddagongrubber.com'
   - '+.sddcp.com'
@@ -48187,7 +48181,6 @@ payload:
   - '+.shangyejihua.com'
   - '+.shangyekj.com'
   - '+.shangyeluoji.com'
-  - '+.shangyexin.com'
   - '+.shangyexinzhi.com'
   - '+.shangyouze.com'
   - '+.shangyubank.com'
@@ -49579,7 +49572,6 @@ payload:
   - '+.sjzyz.net'
   - '+.sjzz.cc'
   - '+.sjzzimu.com'
-  - '+.sk-mtek.com'
   - '+.sk163.com'
   - '+.sk1999.com'
   - '+.sk2game.com'
@@ -51004,7 +50996,6 @@ payload:
   - '+.suteidc.com'
   - '+.sutuiapp.com'
   - '+.sutune.me'
-  - '+.suuk.org'
   - '+.suv666.com'
   - '+.suxiaohu.com'
   - '+.suxiazai.com'
@@ -53820,6 +53811,7 @@ payload:
   - '+.tunynet.com'
   - '+.tuo-li.com'
   - '+.tuo-pan.com'
+  - '+.tuocad.com'
   - '+.tuodanyy.com'
   - '+.tuohuangzu.com'
   - '+.tuoluocaijing.com'
@@ -54837,6 +54829,7 @@ payload:
   - '+.uworter.com'
   - '+.uwowo.com'
   - '+.ux18.com'
+  - '+.ux6.com'
   - '+.ux87.com'
   - '+.ux98.com'
   - '+.uxacn.com'
@@ -55838,6 +55831,7 @@ payload:
   - '+.wangrongbao.com'
   - '+.wangrunze.com'
   - '+.wangshangfayuan.com'
+  - '+.wangsherong.com'
   - '+.wangshidi.com'
   - '+.wangshu.la'
   - '+.wangshuashua.com'
@@ -59968,6 +59962,7 @@ payload:
   - '+.xixik.net'
   - '+.xixin123.com'
   - '+.xixipan.com'
+  - '+.xixiqipai.com'
   - '+.xixiqiu.com'
   - '+.xixisys.com'
   - '+.xixiwg.com'
@@ -60009,6 +60004,7 @@ payload:
   - '+.xj120.com'
   - '+.xj123.info'
   - '+.xj169.com'
+  - '+.xj71.com'
   - '+.xj7road.com'
   - '+.xj96596.com'
   - '+.xjabc.net'
@@ -60061,7 +60057,6 @@ payload:
   - '+.xjrb.net'
   - '+.xjrmyy.com'
   - '+.xjshift.com'
-  - '+.xjstnyly.com'
   - '+.xjtour.com'
   - '+.xjtsnews.com'
   - '+.xjtuccjsj.com'
@@ -62841,6 +62836,7 @@ payload:
   - '+.youxiaxiazai.com'
   - '+.youxibao.com'
   - '+.youxibaoku.com'
+  - '+.youxibd.com'
   - '+.youxicdn.com'
   - '+.youxichaguan.com'
   - '+.youxicheng.net'
@@ -62994,7 +62990,6 @@ payload:
   - '+.yqh5.com'
   - '+.yqhapp.com'
   - '+.yqhlm.com'
-  - '+.yqhy.org'
   - '+.yqhyy.com'
   - '+.yqibook.com'
   - '+.yqie.com'
@@ -63949,6 +63944,7 @@ payload:
   - '+.yz168.cc'
   - '+.yz360.cc'
   - '+.yz3g.net'
+  - '+.yz4l.com'
   - '+.yz868.com'
   - '+.yzbank.com'
   - '+.yzbo.tv'
@@ -65422,6 +65418,7 @@ payload:
   - '+.zhuji.la'
   - '+.zhuji.net'
   - '+.zhuji5.com'
+  - '+.zhujia120.com'
   - '+.zhujia360.com'
   - '+.zhujian.org'
   - '+.zhujiangbeer.com'
@@ -66337,7 +66334,6 @@ payload:
   - '+.ztqqt.com'
   - '+.ztrhmall.com'
   - '+.ztrong.com'
-  - '+.ztrskj.com'
   - '+.ztsafe.com'
   - '+.ztsfc.com'
   - '+.ztt.cc'
@@ -66700,6 +66696,7 @@ payload:
   - '+.zyzaojiao.com'
   - '+.zyzg.com'
   - '+.zyzhan.com'
+  - '+.zyzhang.com'
   - '+.zyzhyl.com'
   - '+.zyzj.org'
   - '+.zyzj360.com'
