--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1160,6 +1160,7 @@ payload:
   - '+.123menpiao.com'
   - '+.123nice.net'
   - '+.123novel.com'
+  - '+.123pan.com'
   - '+.123qibu.com'
   - '+.123qy.com'
   - '+.123slg.com'
@@ -1354,7 +1355,6 @@ payload:
   - '+.155idc.com'
   - '+.15666.com'
   - '+.156zy.com'
-  - '+.157120.com'
   - '+.15803.com'
   - '+.1586f.com'
   - '+.1588.tv'
@@ -6425,7 +6425,6 @@ payload:
   - '+.869d.com'
   - '+.869v.com'
   - '+.86amsdy.com'
-  - '+.86campus.com'
   - '+.86clouds.com'
   - '+.86ditu.com'
   - '+.86dm.cc'
@@ -8874,7 +8873,6 @@ payload:
   - '+.amz123.com'
   - '+.amz520.com'
   - '+.amzcaptain.com'
-  - '+.an-ran.com'
   - '+.analysysdata.com'
   - '+.analytics-china.com'
   - '+.analyticskey.com'
@@ -10025,7 +10023,6 @@ payload:
   - '+.baicuoa.com'
   - '+.baidajob.com'
   - '+.baidao.com'
-  - '+.baidd.com'
   - '+.baidenafu.com'
   - '+.baideye.com'
   - '+.baidinet.com'
@@ -11120,7 +11117,6 @@ payload:
   - '+.bidianer.com'
   - '+.bidingxing.com'
   - '+.bidns.net'
-  - '+.bidu.com'
   - '+.biduo.cc'
   - '+.biduobao.com'
   - '+.biduowu.com'
@@ -12534,7 +12530,6 @@ payload:
   - '+.bxwx99.com'
   - '+.bxwxorg.com'
   - '+.bxxy.com'
-  - '+.bxynzz.com'
   - '+.bxyuer.com'
   - '+.bxzhiku.com'
   - '+.bxzxw.com'
@@ -12669,7 +12664,6 @@ payload:
   - '+.bzzss.com'
   - '+.c-119.com'
   - '+.c-3.moe'
-  - '+.c-c.com'
   - '+.c-canyin.com'
   - '+.c-cnc.com'
   - '+.c-ctrip.com'
@@ -13952,7 +13946,6 @@ payload:
   - '+.chance-ad.com'
   - '+.chandashi.com'
   - '+.changan.biz'
-  - '+.changan.com'
   - '+.changancap.com'
   - '+.changanfunds.com'
   - '+.changansuzuki.com'
@@ -14057,7 +14050,6 @@ payload:
   - '+.chaoshen.cc'
   - '+.chaoshengboliuliangji.com'
   - '+.chaoskeh.com'
-  - '+.chaosu.com'
   - '+.chaosuduokai.com'
   - '+.chaosw.com'
   - '+.chaov.com'
@@ -16721,6 +16713,7 @@ payload:
   - '+.contentchina.com'
   - '+.contentchina.net'
   - '+.contiez.com'
+  - '+.controlinai.com'
   - '+.conuo.com'
   - '+.convergemob.com'
   - '+.convertlab.com'
@@ -19883,7 +19876,6 @@ payload:
   - '+.dqshjt.com'
   - '+.dqyfapiao.com'
   - '+.dr009.com'
-  - '+.dr668.com'
   - '+.drageasy.com'
   - '+.dragon-guide.net'
   - '+.dragon-hotel.com'
@@ -21555,7 +21547,6 @@ payload:
   - '+.esuniao.com'
   - '+.esunny.com'
   - '+.eswin.com'
-  - '+.esxqk.com'
   - '+.eszmall.com'
   - '+.esztsg.org'
   - '+.esztyg.com'
@@ -22150,7 +22141,6 @@ payload:
   - '+.fanshicekong.com'
   - '+.fanshuapp.com'
   - '+.fanshui.net'
-  - '+.fanshuvideo.com'
   - '+.fanshuxiaobao.com'
   - '+.fanshuxiaozu.com'
   - '+.fansiji.com'
@@ -23351,7 +23341,6 @@ payload:
   - '+.fuhanziben.com'
   - '+.fuhaodaquan.org'
   - '+.fuhaoku.com'
-  - '+.fuhaozi.com'
   - '+.fuheng.org'
   - '+.fuhuibao.club'
   - '+.fui.im'
@@ -23378,7 +23367,6 @@ payload:
   - '+.fuliba2021.net'
   - '+.fulibbs.com'
   - '+.fulibest.com'
-  - '+.fulichao.com'
   - '+.fulijd.com'
   - '+.fulimin.org'
   - '+.fulin.org'
@@ -25032,7 +25020,6 @@ payload:
   - '+.gpxygpfx.com'
   - '+.gpxz.com'
   - '+.gqgkj.com'
-  - '+.gqhmt.com'
   - '+.gqjd.net'
   - '+.gqk.tv'
   - '+.gqm168.com'
@@ -25132,7 +25119,6 @@ payload:
   - '+.gsafcct.com'
   - '+.gsbankchina.com'
   - '+.gsbankmall.com'
-  - '+.gscaijing.com'
   - '+.gscidc.net'
   - '+.gsdk.tv'
   - '+.gsdlcn.com'
@@ -30081,7 +30067,6 @@ payload:
   - '+.ienjoys.mobi'
   - '+.ierhou.com'
   - '+.iermu.com'
-  - '+.iershoushu.com'
   - '+.iesdouyin.com'
   - '+.ieshu.com'
   - '+.iessay100.com'
@@ -33983,7 +33968,6 @@ payload:
   - '+.jxslsyy.com'
   - '+.jxsqw.com'
   - '+.jxsrfdc.com'
-  - '+.jxsthgz.com'
   - '+.jxsxdp.com'
   - '+.jxtech.net'
   - '+.jxtobo.com'
@@ -34921,7 +34905,6 @@ payload:
   - '+.klandk.com'
   - '+.klchemicals.com'
   - '+.kldjy.com'
-  - '+.kldm.ru'
   - '+.klhuyan.com'
   - '+.klianfa.com'
   - '+.klicen.com'
@@ -36958,7 +36941,6 @@ payload:
   - '+.linkunbin.com'
   - '+.linkvans.com'
   - '+.linkwebll.com'
-  - '+.linlin.com'
   - '+.linlizone.com'
   - '+.linlongyun.com'
   - '+.linlongyx.com'
@@ -37017,7 +36999,6 @@ payload:
   - '+.linuxsight.com'
   - '+.linuxsir.com'
   - '+.linuxso.com'
-  - '+.linuxsong.org'
   - '+.linuxtone.org'
   - '+.linuxyan.com'
   - '+.linuxyunwei.com'
@@ -37491,6 +37472,7 @@ payload:
   - '+.loli.cd'
   - '+.loli.ee'
   - '+.loli.my'
+  - '+.loli.wiki'
   - '+.loliloli.moe'
   - '+.loliloli.net'
   - '+.lolip.net'
@@ -38208,6 +38190,7 @@ payload:
   - '+.lydhb888.com'
   - '+.lydsy.com'
   - '+.lyecs.com'
+  - '+.lyfeyaj.com'
   - '+.lyfff.com'
   - '+.lyg.live'
   - '+.lyg001.com'
@@ -38264,7 +38247,6 @@ payload:
   - '+.lyxyxx.com'
   - '+.lyy99.com'
   - '+.lyyapp.com'
-  - '+.lyyourc.com'
   - '+.lyyzfx.net'
   - '+.lyz810.com'
   - '+.lyzfgjj.com'
@@ -38682,11 +38664,9 @@ payload:
   - '+.manpianyi.com'
   - '+.manrong.win'
   - '+.manshitea.com'
-  - '+.mantouji.net'
   - '+.mantusy.com'
   - '+.manwuxian123.com'
   - '+.manxiu-law.com'
-  - '+.many88.com'
   - '+.manyanu.com'
   - '+.manyjs.com'
   - '+.manylaw.com'
@@ -41927,7 +41907,6 @@ payload:
   - '+.norlinked.com'
   - '+.normcore.com'
   - '+.normstar.net'
-  - '+.northdm.com'
   - '+.northdy.com'
   - '+.northgun.com'
   - '+.northidc.net'
@@ -41992,7 +41971,6 @@ payload:
   - '+.nrsfh.com'
   - '+.nrsg.net'
   - '+.nruan.com'
-  - '+.nrzsjk.com'
   - '+.ns1.ge'
   - '+.ns1.hk'
   - '+.ns168.net'
@@ -43295,7 +43273,6 @@ payload:
   - '+.pcmoe.net'
   - '+.pcnsh.com'
   - '+.pcoic.com'
-  - '+.pcp-china.com'
   - '+.pcpop.com'
   - '+.pcsee.org'
   - '+.pct86.com'
@@ -44150,7 +44127,6 @@ payload:
   - '+.pps.tv'
   - '+.ppsao.com'
   - '+.ppsimg.com'
-  - '+.ppslsa.com'
   - '+.ppsoftw.com'
   - '+.ppspain.com'
   - '+.ppsport.com'
@@ -44426,6 +44402,7 @@ payload:
   - '+.pw88.com'
   - '+.pwmis.com'
   - '+.pwmqr.com'
+  - '+.pword.net'
   - '+.pwrd.com'
   - '+.pwsannong.com'
   - '+.px0571.com'
@@ -44973,7 +44950,6 @@ payload:
   - '+.qifub.com'
   - '+.qifuedu.com'
   - '+.qifun.com'
-  - '+.qifuwang.com'
   - '+.qigongworld.net'
   - '+.qiguo.com'
   - '+.qiguoread.com'
@@ -46241,7 +46217,6 @@ payload:
   - '+.rdbom.com'
   - '+.rdbuy.com'
   - '+.rddoc.com'
-  - '+.rdezbie.com'
   - '+.rdgz.org'
   - '+.rdidc.com'
   - '+.rdnsdb.com'
@@ -46561,7 +46536,6 @@ payload:
   - '+.rijiwang.com'
   - '+.riju.tv'
   - '+.rijutv.co'
-  - '+.rijutv.com'
   - '+.rikka.app'
   - '+.rilvtong.com'
   - '+.rilzob.com'
@@ -47830,7 +47804,6 @@ payload:
   - '+.seniverse.com'
   - '+.senleo.com'
   - '+.senlianshop.com'
-  - '+.senlujj.com'
   - '+.senmi88.com'
   - '+.senmiaoschool.com'
   - '+.senorsen.com'
@@ -49607,6 +49580,7 @@ payload:
   - '+.skymobiapp.net'
   - '+.skymoons.com'
   - '+.skymoons.net'
+  - '+.skynicecity.com'
   - '+.skynj.com'
   - '+.skype-china.net'
   - '+.skyrichpower.com'
@@ -49656,7 +49630,6 @@ payload:
   - '+.slinuxer.com'
   - '+.sljkj.com'
   - '+.sljypt.com'
-  - '+.slkeq.com'
   - '+.slkj.org'
   - '+.slksy.com'
   - '+.sllai.com'
@@ -49870,7 +49843,6 @@ payload:
   - '+.so-b.com'
   - '+.so-love.com'
   - '+.so-naver.com'
-  - '+.so-t.net'
   - '+.so-voioe.com'
   - '+.so-w.com'
   - '+.so.com'
@@ -51894,7 +51866,6 @@ payload:
   - '+.taotumowang.com'
   - '+.taotuwu.com'
   - '+.taou.com'
-  - '+.taowenxue.com'
   - '+.taowola.com'
   - '+.taoxiaolu.com'
   - '+.taoxiaozhong.com'
@@ -53446,7 +53417,6 @@ payload:
   - '+.ts100.com'
   - '+.ts108.com'
   - '+.ts166.net'
-  - '+.ts168.net'
   - '+.ts16949px.com'
   - '+.ts16949rz.org'
   - '+.ts95.com'
@@ -57398,7 +57368,6 @@ payload:
   - '+.wlqtpolytheatre.com'
   - '+.wlrjy.com'
   - '+.wlsgjslgy.com'
-  - '+.wlshw.com'
   - '+.wlski.com'
   - '+.wlsrenzaocaoping.com'
   - '+.wlstock.com'
@@ -58006,7 +57975,6 @@ payload:
   - '+.wujiit.com'
   - '+.wujinimg.com'
   - '+.wujixiaoshuo.com'
-  - '+.wujiyou.com'
   - '+.wukong.com'
   - '+.wukong.la'
   - '+.wukongapi.com'
@@ -58281,7 +58249,6 @@ payload:
   - '+.wy182000.com'
   - '+.wy213.com'
   - '+.wy28.com'
-  - '+.wy2sf.com'
   - '+.wyaoqing.com'
   - '+.wyaq.com'
   - '+.wyb168.com'
@@ -58513,7 +58480,6 @@ payload:
   - '+.xbeta.info'
   - '+.xbext.com'
   - '+.xbfnet.com'
-  - '+.xbfqw.com'
   - '+.xbfzb.com'
   - '+.xbhb.net'
   - '+.xbhub.com'
@@ -61121,7 +61087,6 @@ payload:
   - '+.yangtaiapp.com'
   - '+.yangtengfei.com'
   - '+.yangtianb.com'
-  - '+.yangtianbao.com'
   - '+.yangtse.com'
   - '+.yangtze-volga.org'
   - '+.yangwang.pw'
@@ -61243,7 +61208,6 @@ payload:
   - '+.yaoying.vip'
   - '+.yaoyl.com'
   - '+.yaoyouke.com'
-  - '+.yaoyu.com'
   - '+.yaoyuan.com'
   - '+.yaoyuanba.com'
   - '+.yaozh.com'
@@ -65220,7 +65184,6 @@ payload:
   - '+.zhongyougc.com'
   - '+.zhongyunjy.com'
   - '+.zhongzhao.com'
-  - '+.zhongzhengzs.com'
   - '+.zhongzhide.com'
   - '+.zhongzhifaqian.com'
   - '+.zhongzhilin.com'
