--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1676,7 +1676,6 @@ payload:
   - '+.17sucai.com'
   - '+.17syi.com'
   - '+.17sysj.com'
-  - '+.17tanwan.com'
   - '+.17taotaoa.com'
   - '+.17taotaob.com'
   - '+.17taotaoba.com'
@@ -3784,7 +3783,6 @@ payload:
   - '+.5-link.com'
   - '+.5.hn'
   - '+.50-jia.com'
-  - '+.500.com'
   - '+.5000.com'
   - '+.50004.com'
   - '+.5000yan.com'
@@ -6372,7 +6370,6 @@ payload:
   - '+.84dwc.com'
   - '+.84fk.com'
   - '+.84ktv.com'
-  - '+.84lm.net'
   - '+.84zcb.com'
   - '+.84zhu.com'
   - '+.85.com'
@@ -9504,6 +9501,8 @@ payload:
   - '+.artp.cc'
   - '+.artplusall.com'
   - '+.artpro.com'
+  - '+.artpro.vip'
+  - '+.artproglobal.com'
   - '+.artrade.com'
   - '+.artron.net'
   - '+.artronimages.com'
@@ -9844,7 +9843,6 @@ payload:
   - '+.axtmy.com'
   - '+.axtoutiao.com'
   - '+.axuer.com'
-  - '+.axure.org'
   - '+.axure.us'
   - '+.axureshop.com'
   - '+.axureux.com'
@@ -13467,9 +13465,9 @@ payload:
   - '+.cdmm.net'
   - '+.cdmoz.org'
   - '+.cdn-cdn.net'
-  - '+.cdn-chuang.com'
   - '+.cdn-data-cloud.com'
   - '+.cdn-dns-kubo.com'
+  - '+.cdn-dodo.com'
   - '+.cdn-files.net'
   - '+.cdn-hotels.com'
   - '+.cdn-ng.net'
@@ -14220,7 +14218,6 @@ payload:
   - '+.chengyangnews.com'
   - '+.chengyangyang.com'
   - '+.chengye-capital.com'
-  - '+.chengyin.org'
   - '+.chengyuw.com'
   - '+.chengyuwb.com'
   - '+.chengzhongmugu.wang'
@@ -14623,6 +14620,7 @@ payload:
   - '+.chinaedunet.com'
   - '+.chinaedunewsw.com'
   - '+.chinaefu.net'
+  - '+.chinaega.com'
   - '+.chinaehs.net'
   - '+.chinaeic.net'
   - '+.chinaeinet.com'
@@ -15057,7 +15055,6 @@ payload:
   - '+.chingli.com'
   - '+.chingmi.com'
   - '+.chinlingo.com'
-  - '+.chinput.com'
   - '+.chint.com'
   - '+.chint.net'
   - '+.chipcoo.com'
@@ -15545,6 +15542,7 @@ payload:
   - '+.cjhxfund.com'
   - '+.cjienc.com'
   - '+.cjiit.com'
+  - '+.cjjd08.com'
   - '+.cjjhb.com'
   - '+.cjjjs.com'
   - '+.cjjnff.com'
@@ -16336,7 +16334,6 @@ payload:
   - '+.cnrmobile.com'
   - '+.cnrouter.com'
   - '+.cnrunda.com'
-  - '+.cnrv.io'
   - '+.cns.hk'
   - '+.cnsaes.org'
   - '+.cnsal.com'
@@ -17569,7 +17566,6 @@ payload:
   - '+.cxzudwk.com'
   - '+.cxzw.com'
   - '+.cxzww.com'
-  - '+.cxzzcsasa.net'
   - '+.cy-cdn.com'
   - '+.cy-email.com'
   - '+.cy.com'
@@ -17786,7 +17782,6 @@ payload:
   - '+.daba.com'
   - '+.dabaicai.com'
   - '+.dabaicai.org'
-  - '+.dabaicai.pw'
   - '+.dabaicai.shop'
   - '+.dabangm.com'
   - '+.dabangp.com'
@@ -18251,7 +18246,6 @@ payload:
   - '+.daxuecn.com'
   - '+.daxueit.com'
   - '+.daxuepc.com'
-  - '+.daxueshengqiandai.com'
   - '+.daxueshi.com'
   - '+.daxuesou.com'
   - '+.daxuesushe.com'
@@ -18440,7 +18434,6 @@ payload:
   - '+.ddstarapp.com'
   - '+.ddswcm.com'
   - '+.ddsy.com'
-  - '+.ddtaba.com'
   - '+.ddtugame.com'
   - '+.ddtui.com'
   - '+.ddun.com'
@@ -18674,6 +18667,7 @@ payload:
   - '+.dezhongmobi.com'
   - '+.dezhoudaily.com'
   - '+.dezhouqh.com'
+  - '+.dezhuyun.com'
   - '+.df81.com'
   - '+.df9377.com'
   - '+.dfafei.com'
@@ -20920,7 +20914,6 @@ payload:
   - '+.eduuu.com'
   - '+.eduwenzheng.com'
   - '+.eduwest.com'
-  - '+.eduwg.com'
   - '+.eduwo.com'
   - '+.eduwx.com'
   - '+.eduxiao.com'
@@ -21384,6 +21377,7 @@ payload:
   - '+.epexpo-asia.com'
   - '+.ephen.me'
   - '+.ephoton.me'
+  - '+.epian.vip'
   - '+.epichust.com'
   - '+.epinautomation.com'
   - '+.epinduo.com'
@@ -23403,6 +23397,7 @@ payload:
   - '+.funnycore.com'
   - '+.funnypicsbox.com'
   - '+.funnyplaying.com'
+  - '+.funplay66.com'
   - '+.funshion.com'
   - '+.funshion.net'
   - '+.funshipin.com'
@@ -24515,7 +24510,6 @@ payload:
   - '+.gkoudai.com'
   - '+.gkpass.com'
   - '+.gkshuju.com'
-  - '+.gkstk.com'
   - '+.gktianshanjd.com'
   - '+.gkwo.net'
   - '+.gkxd.com'
@@ -24655,7 +24649,6 @@ payload:
   - '+.gng92.com'
   - '+.gnhpc.com'
   - '+.gnrcbank.com'
-  - '+.gnss.help'
   - '+.gnssinfo.com'
   - '+.gnssopenlab.org'
   - '+.gnvip.net'
@@ -28720,7 +28713,6 @@ payload:
   - '+.huayiauto.com'
   - '+.huayicn.com'
   - '+.huayidiaosu.com'
-  - '+.huayilawyers.com'
   - '+.huayimedia.com'
   - '+.huayiming.com'
   - '+.huayinjapan.com'
@@ -29963,7 +29955,6 @@ payload:
   - '+.idianchou.com'
   - '+.idianfa.com'
   - '+.idianshijia.com'
-  - '+.idig8.com'
   - '+.idigi.net'
   - '+.idkaiu.com'
   - '+.idler-et.com'
@@ -30502,6 +30493,7 @@ payload:
   - '+.imdadui.com'
   - '+.imdaike.com'
   - '+.imdo.co'
+  - '+.imdodo.com'
   - '+.imdou.net'
   - '+.imdst.com'
   - '+.imedao.com'
@@ -31312,7 +31304,6 @@ payload:
   - '+.itjspx.com'
   - '+.itjuzi.com'
   - '+.itkeyword.com'
-  - '+.itkoala.com'
   - '+.itkoudai.com'
   - '+.itlu.org'
   - '+.itluantan.com'
@@ -38016,6 +38007,8 @@ payload:
   - '+.luyinla.com'
   - '+.luyouqi.biz'
   - '+.luyouqi.com'
+  - '+.luyouwang.com'
+  - '+.luyouwang.net'
   - '+.luyouxia.com'
   - '+.luyuanqj.com'
   - '+.luzexi.com'
@@ -38082,7 +38075,6 @@ payload:
   - '+.lvyou114.com'
   - '+.lvyou5.net'
   - '+.lvyou521.com'
-  - '+.lvyoubaotech.com'
   - '+.lvyoubei.com'
   - '+.lvyougl.com'
   - '+.lvyouw.net'
@@ -38388,7 +38380,6 @@ payload:
   - '+.mafengwo.com'
   - '+.mafengwo.ink'
   - '+.mafengwo.net'
-  - '+.mafenword.com'
   - '+.maff.com'
   - '+.mafutian.net'
   - '+.mag10000.com'
@@ -39220,7 +39211,6 @@ payload:
   - '+.memewan.com'
   - '+.memeyule.com'
   - '+.memorieslab.com'
-  - '+.memorycarddeal.com'
   - '+.memoryhere.com'
   - '+.mems.me'
   - '+.memsconsulting.com'
@@ -39698,6 +39688,7 @@ payload:
   - '+.mingshiedu.com'
   - '+.mingshijt.com'
   - '+.mingsoft.net'
+  - '+.mingstar.net'
   - '+.mingtaokeji.com'
   - '+.mingtian.com'
   - '+.mingtian6.com'
@@ -40508,6 +40499,7 @@ payload:
   - '+.mtr8.com'
   - '+.mtrendgroup.com'
   - '+.mtscj.com'
+  - '+.mttsq.com'
   - '+.mtty.com'
   - '+.mtu46.com'
   - '+.mtunique.com'
@@ -44328,7 +44320,6 @@ payload:
   - '+.puhuacapital.com'
   - '+.puhuahui.com'
   - '+.puiedu.com'
-  - '+.puji114.com'
   - '+.pujia8.com'
   - '+.pujiaba.com'
   - '+.pujiahh.com'
@@ -45959,7 +45950,6 @@ payload:
   - '+.qxka.com'
   - '+.qxkp.net'
   - '+.qxlib.com'
-  - '+.qxnav.com'
   - '+.qxnecn.com'
   - '+.qxnic.com'
   - '+.qxnzx.com'
@@ -46133,6 +46123,7 @@ payload:
   - '+.ranwen.la'
   - '+.ranwen.tw'
   - '+.ranwena.com'
+  - '+.ranwena.net'
   - '+.ranwenxs.com'
   - '+.ranwenzw.com'
   - '+.ranyi.net'
@@ -46593,6 +46584,7 @@ payload:
   - '+.rkdatabase.com'
   - '+.rkeji.com'
   - '+.rkgaming.com'
+  - '+.rkmikn.xyz'
   - '+.rksec.com'
   - '+.rkvir.com'
   - '+.rl-consult.com'
@@ -47340,6 +47332,7 @@ payload:
   - '+.sccwz.com'
   - '+.scdbzzw.com'
   - '+.scdn1e8v.com'
+  - '+.scdndsa6.com'
   - '+.scdnf80r.com'
   - '+.scdng.com'
   - '+.scdng8js.com'
@@ -47347,6 +47340,7 @@ payload:
   - '+.scdnl3bk.com'
   - '+.scdnl9cm.com'
   - '+.scdnmogt.com'
+  - '+.scdnn4t9.com'
   - '+.scdno5zl.com'
   - '+.scdnrvy1.com'
   - '+.scdnucc5.com'
@@ -51564,6 +51558,7 @@ payload:
   - '+.tadu.com'
   - '+.taeapp.com'
   - '+.tag.gg'
+  - '+.tagjj.com'
   - '+.taglyst.com'
   - '+.tagmmm.com'
   - '+.tagphi.net'
@@ -52566,6 +52561,7 @@ payload:
   - '+.tianzeba.com'
   - '+.tianzhao.net'
   - '+.tianzhuo.com'
+  - '+.tianzhuobj.com'
   - '+.tianzikj.com'
   - '+.tianziyu.com'
   - '+.tianzongyouxi.com'
@@ -54230,7 +54226,6 @@ payload:
   - '+.ueeshop.com'
   - '+.uehtml.com'
   - '+.ueibo.com'
-  - '+.uekeer.com'
   - '+.uelike.com'
   - '+.uemo.net'
   - '+.uepei.com'
@@ -60720,6 +60715,7 @@ payload:
   - '+.xxd.io'
   - '+.xxdao.com'
   - '+.xxfzl.com'
+  - '+.xxghh.biz'
   - '+.xxgj47.com'
   - '+.xxgzmlt.com'
   - '+.xxhd-tech.com'
@@ -61961,6 +61957,7 @@ payload:
   - '+.yinxinbh.com'
   - '+.yinxing.com'
   - '+.yinxunbiao.com'
+  - '+.yinyan.org'
   - '+.yinyue7.com'
   - '+.yinyuegf.com'
   - '+.yinyuemeitu.com'
